# blue-jupyter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
incident-response/sysmon-logs/: Processes.ipynb  Sysmon-Stats.ipynb  sysmon.py
incident-response/sysmon-logs/examples/: HuntingMetasploit.evtx
log-analysis/: HTTP.ipynb
malware-analysis/: .gitignore  Malware-Analysis.ipynb  MalwareSample.py  README.md  main.py
malware-analysis/dropbox/: SampleNegative.txt
utils/: __init__.py  colors.py  malware.py
