[tool.poetry]
name = "blue-jupyter"
version = "0.1.0"
description = "Jupyter Notebooks for the Blue Team"
authors = ["Michael Taggart <mtaggart@taggart-tech.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
python-evtx = "^0.7.4"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
ipywidgets = "^7.6.5"
networkx = "^2.6.3"
virustotal-api = "^1.1.11"
stringsifter = "~=2.0"
colorama = "^0.4.4"
fileupload = "^0.1.5"
pyminizip = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
